@@ -50,6 +50,7 @@ import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
@@ -338,7 +339,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
         List<ExtensionFinder> finders;
         if (type == ExtensionFinder.class) {
             // Avoid infinite recursion of using ExtensionFinders to find ExtensionFinders
-            finders = Collections.singletonList(new ExtensionFinder.Sezpoz());
+            finders = List.of(new ExtensionFinder.Sezpoz());
         } else {
             finders = hudson.getExtensionList(ExtensionFinder.class);
         }
@@ -597,7 +598,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
         DependencyClassLoader(ClassLoader parent, File archive, List<Dependency> dependencies, PluginManager pluginManager) {
             super(parent);
             this._for = archive;
-            this.dependencies = Collections.unmodifiableList(new ArrayList<>(dependencies));
+            this.dependencies = List.copyOf(dependencies);
             this.pluginManager = pluginManager;
         }
 
@@ -629,7 +630,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
                     for (Dependency d : dependencies) {
                         PluginWrapper p = pluginManager.getPlugin(d.shortName);
                         if (p != null && p.isActive())
-                            cgd.run(Collections.singleton(p));
+                            cgd.run(Set.of(p));
                     }
                 } catch (CycleDetectedException e) {
                     throw new AssertionError(e);    // such error should have been reported earlier
