@@ -39,7 +39,7 @@ public class NodeParallelTest {
                 // r.createSlave();
                 DumbSlave agent = new DumbSlave("agent-" + i, "/tmp", new JNLPLauncher(true));
                 r.jenkins.addNode(agent);
-                agent.setNodeProperties(Collections.singletonList(new EnvironmentVariablesNodeProperty(new EnvironmentVariablesNodeProperty.Entry("foo", "" + i))));
+                agent.setNodeProperties(List.of(new EnvironmentVariablesNodeProperty(new EnvironmentVariablesNodeProperty.Entry("foo", "" + i))));
                 return null;
             } catch (Exception e1) {
                 throw new RuntimeException(e1);
